# sas2parquet

./: .clangd  CMakeLists.txt  Final_Candy.csv  Final_Candy.parquet  main.cpp
include/: readstat.h
lib/: CMakeLists.txt  readstat_io_unistd.c  readstat_parser.c
lib/sas/: readstat_sas.c  readstat_sas7bdat_read.c  readstat_sas_rle.c
rust/sas2parquet/: Cargo.toml
rust/sas2parquet/files/: weigth2.sas7bdat
rust/sas2parquet/src/: decoder.rs  main.rs
